--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/* .background {
-	box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .2);
-} */
-
 .flex-form input[type="submit"] {
 	background: black;
 	border: 1px solid black;
@@ -113,29 +109,23 @@ input[type="search"] {
 .cover {
 	display: flex;
 	justify-content: center;
-
-	/* flex-direction: column; */
 }
 
 .title-container {
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	/* width: 40%; */
 	margin: 0 auto;
-	/* background: rgba(0, 0, 0, .5); */
 	align-items: center;
 }
 
 .background-title {
-	/* background: rgba(0, 0, 0, .4); */
 	height: 60px;
 	border-radius: 5%;
-	/* align-content: center; */
+	background: rgba(170, 170, 170, .3);
 }
 
 .title {
-	/* background: none; */
 	font-family: Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 	font-size: 2.6rem;
@@ -168,8 +158,6 @@ input[type="search"] {
 	border-radius: 1%;
 	margin: 0 auto;
 	margin: 5px;
-
-	/* text-align: center; */
 }
 
 #target > div:nth-child(2) {
@@ -181,7 +169,6 @@ article {
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	/* align-items: center; */
 }
 
 article > p {
@@ -190,13 +177,10 @@ article > p {
 }
 
 .main-div {
-	/* display: inline-block; */
-	/* margin: 0 auto; */
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	/* border: 1px solid black; */
-	/* width: 100vw; */
+
 	justify-content: center;
 	align-items: center;
 }
