--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,13 @@
+/* .main-div {
+	display: flex;
+	flex-direction: column;
+} */
+
+.notification.is-primary {
+	display: flex;
+	justify-content: center;
+}
+
 .flex-form input[type="submit"] {
 	background: black;
 	border: 1px solid black;
@@ -41,7 +51,7 @@ input[type="search"] {
 
 @media all and (max-width: 800px) {
 	body {
-		font-size: 0.9rem;
+		/* font-size: 0.9rem; */
 	}
 
 	input[type="search"] {
@@ -72,7 +82,7 @@ input[type="search"] {
 	}
 
 	h1 {
-		font-size: 2rem;
+		/* font-size: 2rem; */
 		align-content: center;
 		align-items: center;
 	}
@@ -115,8 +125,9 @@ input[type="search"] {
 
 .background-title {
 	height: 60px;
-	border-radius: 5%;
-	background: rgba(170, 170, 170, .3);
+	background: rgba(25, 27, 23, .7);
+	padding: 10px 10px 20px 10px;
+	align-items: center;
 }
 
 .title {
@@ -173,13 +184,13 @@ article > p {
 	text-align: center;
 }
 
-.main-div {
+/* .main-div {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-}
+} */
 
 .forecast {
 	width: 100%;
@@ -189,4 +200,115 @@ article > p {
 .flex-form {
 	margin-top: 20px;
 	margin-bottom: 5vh;
+}
+
+.main-div {
+	display: grid;
+	grid-template-columns: repeat(, 1fr);
+	grid-gap: 10px;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	background: #333;
+	color: #fff;
+	font-family: 'Roboto', sans-serif;
+}
+
+h2 {
+	/* font-size: 2rem; */
+	font-weight: 300;
+	margin: 10px;
+}
+
+h2 span {
+	font-size: 1.8rem;
+}
+
+p {
+	font-size: 1.5rem;
+}
+
+.container {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 10px;
+}
+
+.container > div {
+	cursor: pointer;
+	height: 210px;
+	background-size: cover;
+	background-attachment: fixed;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+
+	transition: all 0.5s ease-in;
+}
+
+.container > div:hover {
+	opacity: 0.7;
+	transform: scale(0.98);
+}
+
+.container > div:nth-of-type(1) {
+	grid-column: 1 / 3;
+}
+
+.container > div:nth-of-type(6) {
+	grid-column: 3 / 5;
+}
+
+.container > div:nth-of-type(9) {
+	grid-column: 3 / 5;
+}
+
+.container > div:nth-of-type(10) {
+	grid-column: 1 / 3;
+}
+
+.bg1 {
+	/* background: url('https://i.ibb.co/dBLbrRV/bg1.jpg'); */
+	background: rgba(25, 27, 23, .9);
+}
+
+.bg2 {
+	/* background: url('https://i.ibb.co/Fb5jb3J/bg2.jpg');s */
+	background: rgba(139, 143, 104, .9);
+}
+
+#pollenCounts {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	font-size: 1.2rem;
+}
+
+#wind-speeds {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	font-size: 1.5rem;
+}
+
+#sunrise-sunset {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	font-size: 1.5rem;
+}
+
+.hidden {
+	visibility: hidden;
 }
