--- a/static/styles.css
+++ b/static/styles.css
@@ -184,14 +184,6 @@ article > p {
 	text-align: center;
 }
 
-/* .main-div {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-} */
-
 .forecast {
 	width: 100%;
 	text-align: center;
@@ -202,11 +194,11 @@ article > p {
 	margin-bottom: 5vh;
 }
 
-.main-div {
+/* .main-div {
 	display: grid;
 	grid-template-columns: repeat(, 1fr);
 	grid-gap: 10px;
-}
+} */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
@@ -236,10 +228,18 @@ p {
 	font-size: 1.5rem;
 }
 
+.main-container {
+}
+
 .container {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: auto auto auto auto;
+	/* grid-template-columns: repeat(auto, 1fr); */
+	/* grid-auto-rows: minmax(100px, 300px); */
 	grid-gap: 10px;
+
+	width: 100%;
 }
 
 .container > div {
@@ -258,8 +258,8 @@ p {
 }
 
 .container > div:hover {
-	opacity: 0.7;
-	transform: scale(0.98);
+	opacity: 1.0;
+	/* transform: scale(0.98); */
 }
 
 .container > div:nth-of-type(1) {
@@ -285,7 +285,8 @@ p {
 
 .bg2 {
 	/* background: url('https://i.ibb.co/Fb5jb3J/bg2.jpg');s */
-	background: rgba(139, 143, 104, .9);
+	/* background: rgba(139, 143, 104, .9); */
+	background: rgba(138, 138, 88, 0.9);
 }
 
 #pollenCounts {
